welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: '=' expected but ';' found.
def dogHouse () {
^