welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
var compteur

def dogHouse () {
	for(i<-1 to 2)
	{
		avance()
	}
}
